Fix Exception during task bar button initialization on some systems
- Due to a bug in WPF, an exception can occur if TaskbarItemInfo is used in xaml.
- The exception is not thrown when using it from code behind.

--- a/src/TumblThree/TumblThree.Presentation/Views/ShellWindow.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/ShellWindow.xaml
@@ -17,20 +17,22 @@
         </MultiBinding>
     </Window.Title>
 
+    <!-- working around bug
     <Window.TaskbarItemInfo>
         <TaskbarItemInfo>
             <TaskbarItemInfo.ThumbButtonInfos>
                 <ThumbButtonInfo x:Name="playButton" Command="{Binding CrawlerService.CrawlCommand}"
                                  ImageSource="{StaticResource PlayButtonImage}" />
-                <ThumbButtonInfo x:Name="resumeButton" Command="{Binding CrawlerService.ResumeCommand}"
-                                 ImageSource="{StaticResource ResumeButtonImage}" />
                 <ThumbButtonInfo x:Name="pauseButton" Command="{Binding CrawlerService.PauseCommand}"
                                  ImageSource="{StaticResource PauseButtonImage}" />
+                <ThumbButtonInfo x:Name="resumeButton" Command="{Binding CrawlerService.ResumeCommand}"
+                                 ImageSource="{StaticResource ResumeButtonImage}" />
                 <ThumbButtonInfo x:Name="stopButton" Command="{Binding CrawlerService.StopCommand}"
                                  ImageSource="{StaticResource StopButtonImage}" />
             </TaskbarItemInfo.ThumbButtonInfos>
         </TaskbarItemInfo>
     </Window.TaskbarItemInfo>
+    -->
 
     <Window.InputBindings>
         <KeyBinding Command="{Binding CrawlerService.RemoveBlogCommand}" Key="Delete" Modifiers="Shift" />
